# fulloch-hagp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_gpu  LICENSE  SECURITY.md  SETUP_TUTORIAL.txt  app.py  compose.yml  compose_gpu.yml  launch.sh  publish.sh  pyproject.toml  readme.md  requirements-optional.txt  requirements.txt
.github/workflows/: docker-publish.yml
api/: __init__.py  server.py
audio/: __init__.py
core/: __init__.py  api_service.py  asr.py  assistant.py  audio.py  slm.py  tts.py  tts_tiny.py
data/: config.example.yml
data/voices/: cori.txt
searxng_data/: settings.yml
tests/: __init__.py  conftest.py  test_api_service.py  test_intent_catch.py  test_tool_registry.py
tools/: __init__.py  airtouch.py  google_calendar.py  home_assistant.py  lighting.py  pioneer_avr.py  search_web.py  spotify.py  thinq.py  weather_time.py  webos.py
utils/: __init__.py  env_config.py  intent_examples.txt  intents.py  system_prompts.py
wav/: gen_sound.py
